--- a/Resources/App_GlobalResources/SharedResources.nl-NL.resx
+++ b/Resources/App_GlobalResources/SharedResources.nl-NL.resx
@@ -1384,7 +1384,7 @@
     <value>Publiek</value>
   </data>
   <data name="PublicMembership.Text" xml:space="preserve">
-    <value>&lt;strong&gt;* Opmerking: &lt;/strong&gt; Lidmaatschap van deze website is publiek. Als je account informatie is verzonden, dan heb je onmiddelijk toegang tot de website.</value>
+    <value>&lt;strong&gt;* Opmerking: &lt;/strong&gt; Lidmaatschap van deze website is publiek. Nadat je accountinformatie is verzonden, heb je onmiddellijk toegang tot de website.</value>
   </data>
   <data name="PURGE.Log" xml:space="preserve">
     <value>Site logboek is succesvol geleegd</value>
@@ -1637,8 +1637,8 @@ Als je deze toevoeging verwacht, negeer dan deze e-mail; anders wordt een onmidd
   <data name="System_Default.Text" xml:space="preserve">
     <value>Systeemstandaard</value>
   </data>
-  <data name="TabAccess.Error" xml:space="preserve">
-    <value>Je heeft geen toegang om deze pagina te bekijken.</value>
+  <data name="TabAccess.Error" lastModified="2020-05-15 15:54:23">
+    <value xml:space="preserve">Je hebt geen toegang om deze pagina te bekijken.</value>
   </data>
   <data name="TESTCOMPLETE.Log" xml:space="preserve">
     <value>Test uitgevoerd. {0} milliseconden gewacht.</value>
