--- a/Resources/DesktopModules/ResourceManager/App_LocalResources/view.ascx.nl-NL.resx
+++ b/Resources/DesktopModules/ResourceManager/App_LocalResources/view.ascx.nl-NL.resx
@@ -18,7 +18,7 @@
   <data name="GroupModeError.Text" xml:space="preserve" lastModified="2021-09-01 11:36:57">
     <value>De module is in groepsmodus, maar de pagina niet.</value>
   </data>
-  <data name="UserModeError.Text" xml:space="preserve" lastModified="2021-09-01 11:36:57">
-    <value>De module is in gebruikersmodus, maar de gebruiker is niet ingelogged</value>
+  <data name="UserModeError.Text" xml:space="preserve" lastModified="2021-09-02 19:10:19">
+    <value>De module is in gebruikersmodus, maar de gebruiker is niet ingelogd</value>
   </data>
 </root>
