--- a/Resources/App_GlobalResources/prompt.nl-NL.resx
+++ b/Resources/App_GlobalResources/prompt.nl-NL.resx
@@ -349,13 +349,13 @@ Zoals met de meeste
     <value>De opdracht get-portal neemt geen argumenten of vlaggen.</value>
   </data>
   <data name="Prompt_GetPortal_NotFound.Text" xml:space="preserve" lastModified="2021-09-04 19:47:25">
-    <value>Kon geen portal vinden met ID van '{0}'</value>
+    <value>Kon geen site vinden met ID van '{0}'</value>
   </data>
   <data name="Prompt_GetSite_Description.Text" xml:space="preserve" lastModified="2021-09-05 19:25:01">
-    <value>Haalt basisinformatie op over de huidige portal of opgegeven portal</value>
+    <value>Haalt basisinformatie op over de huidige site of opgegeven site</value>
   </data>
   <data name="Prompt_GetSite_FlagId.Text" xml:space="preserve" lastModified="2021-09-05 19:25:01">
-    <value>Site-ID om informatie te krijgen. Alleen een applicatiebeheerder kan informatie krijgen van andere portals dan de huidige.</value>
+    <value>Site-ID om informatie te krijgen. Alleen een applicatiebeheerder kan informatie krijgen van andere sites dan de huidige.</value>
   </data>
   <data name="Prompt_Help_Command.Text" xml:space="preserve" lastModified="2021-09-05 19:28:13">
     <value>Commando</value>
@@ -418,7 +418,7 @@ Zoals met de meeste
     <value>Haalt een lijst met modules op op basis van de zoekcriteria</value>
   </data>
   <data name="Prompt_ListModules_FlagDeleted.Text" xml:space="preserve" lastModified="2021-09-05 19:25:01">
-    <value>Indien opgegeven, vindt de opdracht alle module-exemplaren in de portal die zich in de Prullenbak bevinden (if &lt;span class="mono"&gt;--deleted&lt;/span&gt; is true), or all module instances &lt;em&gt;not&lt;/em&gt; in the Recycle Bin (if &lt;span class="mono"&gt;--deleted&lt;/span&gt; Als de vlag is opgegeven, maar er geen waarde wordt opgegeven, wordt deze standaard true. Deze vlag kan worden gebruikt met --name en --title om de resultaten verder te verfijnen.</value>
+    <value>Indien opgegeven, vindt de opdracht alle module-exemplaren in de site die zich in de Prullenbak bevinden (if &lt;span class="mono"&gt;--deleted&lt;/span&gt; is true), or all module instances &lt;em&gt;not&lt;/em&gt; in the Recycle Bin (if &lt;span class="mono"&gt;--deleted&lt;/span&gt; Als de vlag is opgegeven, maar er geen waarde wordt opgegeven, wordt deze standaard true. Deze vlag kan worden gebruikt met --name en --title om de resultaten verder te verfijnen.</value>
   </data>
   <data name="Prompt_ListModules_FlagMax.Text" xml:space="preserve" lastModified="2021-09-04 19:43:44">
     <value>Paginagrootte voor de pagina. Max is 500.</value>
@@ -436,13 +436,13 @@ Zoals met de meeste
     <value>Als deze opdracht is opgegeven, worden alleen modules van de opgegeven pagina weergegeven. Het gebruik van de vlag is niet vereist. U kunt eenvoudig de ID-waarde opgeven als het eerste argument.</value>
   </data>
   <data name="Prompt_ListPortals_Description.Text" xml:space="preserve" lastModified="2021-09-04 19:49:49">
-    <value>Haalt een lijst met portals op voor de huidige DNN-installatie</value>
+    <value>Haalt een lijst met sites op voor de huidige DNN-installatie</value>
   </data>
   <data name="Prompt_ListPortals_NoArgs.Text" xml:space="preserve" lastModified="2021-09-04 19:47:25">
     <value>De opdracht list-portal neemt geen argumenten of vlaggen aan</value>
   </data>
   <data name="Prompt_ListPortals_Results.Text" xml:space="preserve" lastModified="2021-09-04 19:47:25">
-    <value>'{0}' Portal{1} gevonden.</value>
+    <value>'{0}' Site {1} gevonden.</value>
   </data>
   <data name="Prompt_ListServices_Unauthorized.Text" xml:space="preserve" lastModified="2020-09-30 16:58:26">
     <value>Je bent niet geautoriseerd om deze functionaliteit te gebruiken.</value>
@@ -502,7 +502,7 @@ Zoals met de meeste
     <value>Pagina {0} van {1}. Druk op een willekeurige toets om de volgende pagina te laden. Druk op Ctrl + X om te eindigen.</value>
   </data>
   <data name="Prompt_PortalCategory.Text" xml:space="preserve" lastModified="2021-09-05 19:28:13">
-    <value>Portaal commando's</value>
+    <value>Site commando's</value>
   </data>
   <data name="Prompt_Reload_Description.Text" xml:space="preserve" lastModified="2021-09-05 19:28:13">
     <value>Laadt de huidige pagina opnieuw</value>
